tests/resolver/error/type.nk
type Kek =
  | Lul Int
  | Lul String